# sphinx-math-dollar

./: .doctr-files  .gitattributes  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  changelog.html  conftest.py  genindex.html  index.html  math_dollar.py  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs.yml  pythonpackage.yml
_sources/: index.rst.txt
doc/: conf.py  index.rst
doc/_build/doctrees/: index.doctree
doc/_build/html/: .buildinfo  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
docs/: .travis.yml  conf.py  github_deploy_key_sympy_sphinx_math_dollar.enc
docs/_build/doctrees/: environment.pickle
docs/_build/html/: genindex.html  index.html  objects.inv
sphinx_math_dollar/: __init__.py  _version.py  extension.py  math_dollar.py
sphinx_math_dollar/tests/: test_extension.py  test_math_dollar.py
sphinx_math_dollar/tests/test-build/: conf.py  index.rst
sphinx_math_dollar/tests/test-root/: index.rst
